--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.4.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.1",
     "react-scripts": "^2.1.1",
     "sweetalert": "^2.1.2"
   },
